--- a/plugin.video.paktv/changelog.txt
+++ b/plugin.video.paktv/changelog.txt
@@ -1,3 +1,5 @@
+0.1.0 - Only show links with description
+
 0.0.9 - Added NowVideo and Putlocker
       - Improved notification message
       - Fixed error for no episodes found
