--- a/plugin.video.paktv/changelog.txt
+++ b/plugin.video.paktv/changelog.txt
@@ -1,3 +1,6 @@
+0.1.1 - Removed host settings. Use urlresolver settings instead
+      - Added experimental "continuous play"
+
 0.1.0 - Only show links with description
 
 0.0.9 - Added NowVideo and Putlocker
