--- a/plugin.video.paktv/changelog.txt
+++ b/plugin.video.paktv/changelog.txt
@@ -1,3 +1,5 @@
+0.1.2 - Added another HostingBulk match string
+
 0.1.1 - Removed host settings. Use urlresolver settings instead
       - Added experimental "continuous play"
 
